--- a/bookingTour/src/main/resources/application.properties
+++ b/bookingTour/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/booking_tour?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=springuser
+spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
